# the-ai-exchange

./: .gitignore  CLAUDE.md  DEPLOYMENT_CACHE_TROUBLESHOOTING.md  README.md
backend/: .env.example  init_db.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/api/: __init__.py  admin.py  admin_config.py  analytics.py  auth.py  collaboration.py  config.py  config_requests.py  resources.py  subscriptions.py
backend/app/core/: config.py  security.py
backend/app/services/: __init__.py  database.py  email_provider.py  email_service.py
backend/scripts/: load_mock_data.py  manage_users.py
backend/tests/: __init__.py  conftest.py  test_admin_subscriptions.py  test_auth.py  test_main.py  test_models.py
docs/: IMPLEMENTATION_PLAN.md  srs.md
frontend/: .env.example  .eslintrc.cjs  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: AreaSelect.tsx  ConfigSelect.tsx  FilterSidebar.tsx  Footer.tsx  Layout.tsx  PasswordResetFlow.tsx  ResourceCard.tsx
frontend/src/components/admin/: AdminConfigManager.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAdminAnalytics.ts  useAuth.ts  useConfig.ts  useEngagement.ts  useResources.ts
frontend/src/lib/: api.ts  areas.ts  csvExport.ts  tools.ts
frontend/src/pages/: AboutPage.tsx  AdminDashboardPage.tsx  CreateResourcePage.tsx  EditResourcePage.tsx  ExportPage.tsx  GettingStartedPage.tsx  HomePage.tsx  LegalPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResourceDetailPage.tsx  ResourcesPage.tsx  SupportPage.tsx  VerifyEmailPage.tsx
frontend/src/types/: index.ts
