[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "the-ai-exchange"
version = "0.1.0"
description = "A centralized platform for sharing and discovering AI use cases and prompts in a business school environment"
readme = "../README.md"
license = { text = "MIT" }
authors = [{ name = "Michael Borck", email = "michael@example.com" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=25.1.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "yake>=0.3.2",
    "httpx>=0.25.2",
    "slowapi>=0.1.9",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "mypy==1.7.0",
    "ruff==0.1.8",
    "types-python-jose>=3.3.4",
    "types-passlib>=1.7.7",
]


[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
    "C901",  # complexity
    "W292",  # blank line at end of file
    "B008",  # FastAPI Depends() in function defaults is documented pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "python_jose.*",
    "python_jose.jwt",
    "yake.*",
]
ignore_missing_imports = true

# SQLModel/SQLAlchemy type issues - it converts models to response schemas at runtime
[[tool.mypy.overrides]]
module = "app.api.resources"
# Suppress SQLAlchemy ORM method attributes that aren't typed
disable_error_code = ["attr-defined", "return-value"]

[[tool.mypy.overrides]]
module = [
    "app.api.admin",
    "app.api.subscriptions",
]
# Suppress return-value type issues that are handled by FastAPI
disable_error_code = ["return-value"]

# python-jose type issues
[[tool.mypy.overrides]]
module = "app.core.security"
# Suppress any/return type issues from python-jose (untyped library)
disable_error_code = ["no-any-return", "import-untyped"]

# Pydantic settings config issues
[[tool.mypy.overrides]]
module = "app.core.config"
disable_error_code = ["typeddict-unknown-key", "assignment"]

# Database session type issues
[[tool.mypy.overrides]]
module = "app.services.database"
disable_error_code = ["misc"]

# Main and conftest fixtures
[[tool.mypy.overrides]]
module = [
    "app.main",
    "tests.conftest",
]
disable_error_code = ["no-untyped-def", "arg-type"]

# Model dict type annotations for Pydantic
[[tool.mypy.overrides]]
module = "app.models"
disable_error_code = ["type-arg"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
